# rr-cms

./: Cargo.toml  Makefile  README.md
client/: Cargo.toml  Dioxus.toml
client/public/: tailwind.css
client/src/: main.rs
client/src/pages/: mod.rs  route.rs
client/src/pages/home/: mod.rs
client_dx/: Cargo.toml  Dioxus.toml
client_dx/src/components/layout/: mod.rs
client_dx/src/pages/blog/: mod.rs
client_yew/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client_yew/src/: main.rs
server/: Cargo.toml  Makefile
server/examples/: quick_dev.rs
server/src/: ctx.rs  error.rs  main.rs  model.rs
server/src/middlewares/: mw_auth.rs  mw_res_map.rs
server/src/models/: mod.rs  model_tickets.rs
server/src/routes/: mod.rs  routes_tickets.rs
server/src/web/: routes_login.rs
server/src/web/middleware/: mod.rs
server/src/web/routes/: routes_hello.rs  routes_login.rs  routes_tickets.rs
