[package]
name = "client"
version = "0.1.0"
authors = ["renxusheng"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
log = "0.4.21"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
manganis = "0.2.2"
