[package]
name = "client_yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yewdux = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"