[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"

[[example]]
name = "test"
path = "examples/quick_dev.rs"
